# botlyne

./: .env  .env.example  .gitignore  FRONTEND_INTEGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PRD.md  PRODUCTION_READINESS_GUIDE.md  README.md  TESTING.md  debug_kb_content.md  frontend-api-client.ts  main.py  postman_collection.json  pyproject.toml  requirements.txt  schema.sql  temp_query.py  todo.txt
src/: __init__.py
src/api/v1/: apikeys.py  auth.py  chat.py  integrations.py  kb.py  query.py  upload.py
src/archive/: agent.py  answer.py  extract.py  load.py  transform.py
src/core/: __init__.py  auth.py  auth_utils.py  config.py  database.py  retry_utils.py
src/crud/: __init__.py  conversation.py  document.py  kb.py  user.py
src/middleware/: webhook_security.py
src/schemas/: __init__.py  auth.py  chat.py  integrations.py  kb.py  query.py  upload.py
src/services/: __init__.py  ai.py  ai_models.py  ai_service.py  chat_service.py  email_service.py  error_handling.py  etl.py  evolution_api.py  health_checks.py  human_agent_workflow.py  ingestion.py  retrieval.py
tests/: conftest.py  test_ai_service.py  test_auth.py  test_chat.py  test_etl.py  test_health.py  test_integration.py  test_kb.py  test_query.py  test_upload.py
